--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,16 @@
 <html>
   <head>
     <title>Ticketee</title>
+    <%= stylesheet_link_tag 'application', media: 'all','data-turbolinks-track' => true %>
+    <%= javascript_include_tag 'application','data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
-
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
+    <% flash.each do |key, message| %>
+      <div><%= message %></div>
+    <% end %>
+
     <%= yield %>
     <%= debug(params) if Rails.env.development? %>
   </body>
