--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,17 +8,18 @@
         Ticketee
       <% end %>
     </title>
-    <%= stylesheet_link_tag 'application', media: 'all','data-turbolinks-track' => true %>
-    <%= javascript_include_tag 'application','data-turbolinks-track' => true %>
+    <%= stylesheet_link_tag 'application', media: 'all','data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag 'application','data-turbolinks-track': 'reload' %>
     <%= csrf_meta_tags %>
   </head>
 
   <body>
-    <% flash.each do |key, message| %>
-      <div><%= message %></div>
-    <% end %>
-
-    <%= yield %>
-    <%= debug(params) if Rails.env.development? %>
+    <div class="container">
+      <% flash.each do |key, message| %>
+        <div class="alert alert-<%= key %>"><%= message %></div>
+      <% end %>
+      <%= yield %>
+      <%= debug(params) if Rails.env.development? %>
+    </div>
   </body>
 </html>
