Added Bootstrap for styling

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -18,6 +18,20 @@
  @import "font-awesome";
  @import "projects";
 
+ header {
+   @extend .page-header;
+   position: relative;
+   padding-bottom: 0px;
+
+   &:first-child {
+     margin-top: 20px;
+   }
+ }
+ ul.actions {
+   @extend .list-unstyled;
+   @extend .list-inline;
+ }
+
  .page-header {
    position: relative;
    padding-bottom: 0px;
@@ -29,15 +43,8 @@
    }
   }
 
- ul.actions {
-   @extend .list-unstyled;
-   @extend .list-inline;
-   position: absolute;
-   bottom: -2px;
-   right: 2px;
-   max-width: 45%;
-   text-align: right;
- }
+
+
 
  a.new, a.edit, a.delete {
    @extend .btn;
@@ -65,14 +72,6 @@
    }
  }
 
- header {
-   @extend .page-header;
-   position: relative;
-   padding-bottom: 0px;
-   &:first-child {
-     margin-top: 20px;
-   }
- }
 
  .alert-notice {
    @extend .alert-success;
@@ -83,4 +82,12 @@
 
  form {
    max-width: 500px;
+ }
+
+ body {
+   padding-top: 70px;
+ }
+
+ @media(max-width: 500px) {
+   p { color: red }
  }
