--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -8,3 +8,11 @@
 
   <%= simple_format(@ticket.description) %>
 </div>
+<ul id="tickets">
+  <% @project.tickets.each do |ticket| %>
+    <li>
+      #<%= ticket.id %> -
+      <%= link_to ticket.name, [@project, ticket] %>
+    </li>
+  <% end %>
+</ul>
